--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-30-abril-2023" class="section level3" data-height="100">
-<h3>AMG, 30 abril, 2023</h3>
+<div id="amg-01-mayo-2023" class="section level3" data-height="100">
+<h3>AMG, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.13
+22.11
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:03</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-30-abril-2023" class="section level3" data-height="100">
-<h3>El Salto, 30 abril, 2023</h3>
+<div id="el-salto-01-mayo-2023" class="section level3" data-height="100">
+<h3>El Salto, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2973,7 +2973,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.88
+24.87
 </td>
 </tr>
 <tr>
@@ -2984,18 +2984,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.17
+22.15
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:03</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-30-abril-2023" class="section level3" data-height="100">
-<h3>Guadalajara, 30 abril, 2023</h3>
+<div id="guadalajara-01-mayo-2023" class="section level3" data-height="100">
+<h3>Guadalajara, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3046,13 +3046,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:03</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-30-abril-2023" class="section level3" data-height="100">
-<h3>Tlajomulco, 30 abril, 2023</h3>
+<div id="tlajomulco-01-mayo-2023" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3076,7 +3076,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.35
+23.34
 </td>
 </tr>
 <tr>
@@ -3103,13 +3103,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:03</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-30-abril-2023" class="section level3" data-height="100">
-<h3>Tlaquepaque, 30 abril, 2023</h3>
+<div id="tlaquepaque-01-mayo-2023" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3133,7 +3133,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.54
+23.53
 </td>
 </tr>
 <tr>
@@ -3155,18 +3155,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.89
+21.87
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:04</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-30-abril-2023" class="section level3" data-height="100">
-<h3>Tonalá, 30 abril, 2023</h3>
+<div id="tonalá-01-mayo-2023" class="section level3" data-height="100">
+<h3>Tonalá, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.40
+23.39
 </td>
 </tr>
 <tr>
@@ -3212,18 +3212,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.16
+22.12
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:04</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-30-abril-2023" class="section level3" data-height="100">
-<h3>Zapopan, 30 abril, 2023</h3>
+<div id="zapopan-01-mayo-2023" class="section level3" data-height="100">
+<h3>Zapopan, 01 mayo, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3258,7 +3258,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.99
+24.98
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.25
+22.23
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-04-30 07:48:42</p>
+<p>Última actualización: 2023-05-01 07:55:04</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
