--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-31-julio-2023" class="section level3" data-height="100">
-<h3>AMG, 31 julio, 2023</h3>
+<div id="amg-01-agosto-2023" class="section level3" data-height="100">
+<h3>AMG, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2905,7 +2905,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.78
+23.79
 </td>
 </tr>
 <tr>
@@ -2916,7 +2916,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.07
+25.08
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.68
+22.69
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-31-julio-2023" class="section level3" data-height="100">
-<h3>El Salto, 31 julio, 2023</h3>
+<div id="el-salto-01-agosto-2023" class="section level3" data-height="100">
+<h3>El Salto, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2989,13 +2989,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-31-julio-2023" class="section level3" data-height="100">
-<h3>Guadalajara, 31 julio, 2023</h3>
+<div id="guadalajara-01-agosto-2023" class="section level3" data-height="100">
+<h3>Guadalajara, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3019,7 +3019,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.90
+23.94
 </td>
 </tr>
 <tr>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.70
+22.69
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-31-julio-2023" class="section level3" data-height="100">
-<h3>Tlajomulco, 31 julio, 2023</h3>
+<div id="tlajomulco-01-agosto-2023" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3076,7 +3076,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.57
+23.58
 </td>
 </tr>
 <tr>
@@ -3098,18 +3098,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.48
+22.49
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-31-julio-2023" class="section level3" data-height="100">
-<h3>Tlaquepaque, 31 julio, 2023</h3>
+<div id="tlaquepaque-01-agosto-2023" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3155,18 +3155,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.59
+22.60
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-31-julio-2023" class="section level3" data-height="100">
-<h3>Tonalá, 31 julio, 2023</h3>
+<div id="tonalá-01-agosto-2023" class="section level3" data-height="100">
+<h3>Tonalá, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.78
+23.82
 </td>
 </tr>
 <tr>
@@ -3212,18 +3212,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.65
+22.63
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-31-julio-2023" class="section level3" data-height="100">
-<h3>Zapopan, 31 julio, 2023</h3>
+<div id="zapopan-01-agosto-2023" class="section level3" data-height="100">
+<h3>Zapopan, 01 agosto, 2023</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3258,7 +3258,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.15
+25.18
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.82
+22.84
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2023-07-31 07:43:15</p>
+<p>Última actualización: 2023-08-01 07:30:19</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
