--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-29-febrero-2024" class="section level3" data-height="100">
-<h3>AMG, 29 febrero, 2024</h3>
+<div id="amg-01-marzo-2024" class="section level3" data-height="100">
+<h3>AMG, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2905,7 +2905,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-24.36
+24.37
 </td>
 </tr>
 <tr>
@@ -2916,7 +2916,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.32
+25.33
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.40
+23.48
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-29-febrero-2024" class="section level3" data-height="100">
-<h3>El Salto, 29 febrero, 2024</h3>
+<div id="el-salto-01-marzo-2024" class="section level3" data-height="100">
+<h3>El Salto, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2962,7 +2962,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-24.94
+24.96
 </td>
 </tr>
 <tr>
@@ -2973,7 +2973,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.61
+25.51
 </td>
 </tr>
 <tr>
@@ -2984,18 +2984,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.36
+23.55
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-29-febrero-2024" class="section level3" data-height="100">
-<h3>Guadalajara, 29 febrero, 2024</h3>
+<div id="guadalajara-01-marzo-2024" class="section level3" data-height="100">
+<h3>Guadalajara, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3030,7 +3030,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.45
+25.43
 </td>
 </tr>
 <tr>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.54
+23.55
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-29-febrero-2024" class="section level3" data-height="100">
-<h3>Tlajomulco, 29 febrero, 2024</h3>
+<div id="tlajomulco-01-marzo-2024" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3076,7 +3076,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-24.06
+24.08
 </td>
 </tr>
 <tr>
@@ -3087,7 +3087,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.92
+24.85
 </td>
 </tr>
 <tr>
@@ -3098,18 +3098,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.07
+23.29
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-29-febrero-2024" class="section level3" data-height="100">
-<h3>Tlaquepaque, 29 febrero, 2024</h3>
+<div id="tlaquepaque-01-marzo-2024" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3155,18 +3155,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.10
+23.38
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-29-febrero-2024" class="section level3" data-height="100">
-<h3>Tonalá, 29 febrero, 2024</h3>
+<div id="tonalá-01-marzo-2024" class="section level3" data-height="100">
+<h3>Tonalá, 01 marzo, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-24.24
+24.26
 </td>
 </tr>
 <tr>
@@ -3201,7 +3201,64 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.91
+25.30
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
+<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
+</svg>
+Regular
+</td>
+<td style="text-align:right;">
+23.36
+</td>
+</tr>
+</tbody>
+</table>
+<p>Última actualización: 2024-03-01 06:30:16</p>
+</div>
+</div>
+<div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
+<h1>Zapopan</h1>
+<div id="zapopan-01-marzo-2024" class="section level3" data-height="100">
+<h3>Zapopan, 01 marzo, 2024</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<table class="table table-striped table-condensed table-responsive" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+Combustible
+</th>
+<th style="text-align:right;">
+Precio promedio
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:black;overflow:visible;position:relative;">
+<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
+</svg>
+Diesel
+</td>
+<td style="text-align:right;">
+24.22
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;">
+<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
+</svg>
+Premiun
+</td>
+<td style="text-align:right;">
+25.40
 </td>
 </tr>
 <tr>
@@ -3217,64 +3274,7 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
-</div>
-</div>
-<div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
-<h1>Zapopan</h1>
-<div id="zapopan-29-febrero-2024" class="section level3" data-height="100">
-<h3>Zapopan, 29 febrero, 2024</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<table class="table table-striped table-condensed table-responsive" style="margin-left: auto; margin-right: auto;">
-<thead>
-<tr>
-<th style="text-align:left;">
-Combustible
-</th>
-<th style="text-align:right;">
-Precio promedio
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:black;overflow:visible;position:relative;">
-<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
-</svg>
-Diesel
-</td>
-<td style="text-align:right;">
-24.21
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;">
-<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
-</svg>
-Premiun
-</td>
-<td style="text-align:right;">
-25.38
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
-<path d="M32 64C32 28.7 60.7 0 96 0H256c35.3 0 64 28.7 64 64V256h8c48.6 0 88 39.4 88 88v32c0 13.3 10.7 24 24 24s24-10.7 24-24V222c-27.6-7.1-48-32.2-48-62V96L384 64c-8.8-8.8-8.8-23.2 0-32s23.2-8.8 32 0l77.3 77.3c12 12 18.7 28.3 18.7 45.3V168v24 32V376c0 39.8-32.2 72-72 72s-72-32.2-72-72V344c0-22.1-17.9-40-40-40h-8V448c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V64zM96 80v96c0 8.8 7.2 16 16 16H240c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16H112c-8.8 0-16 7.2-16 16z"></path>
-</svg>
-Regular
-</td>
-<td style="text-align:right;">
-23.46
-</td>
-</tr>
-</tbody>
-</table>
-<p>Última actualización: 2024-02-29 06:30:13</p>
+<p>Última actualización: 2024-03-01 06:30:16</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
